// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLinks render component with one column 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_1"
>
  <Grid
    guttersLeft="medium"
  >
    <GridColumn
      all="7"
      className="mfui-beta-download-links__column"
      key=".0"
      mobile="12"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DownloadLinks render component with one column regardless of the quantity 1`] = `
<div
  className="mfui-beta-download-links"
>
  <div
    className="mfui-beta-download-links__item"
    key=".0"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".1"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".2"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".3"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".4"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".5"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
  <div
    className="mfui-beta-download-links__item"
    key=".6"
  >
    <DownloadLink
      extension="PDF"
      fileSize="500 MB"
      href="href"
      text="text"
    />
  </div>
</div>
`;

exports[`DownloadLinks render component with three columns 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_5"
>
  <Grid
    guttersLeft="medium"
  >
    <GridColumn
      className="mfui-beta-download-links__column"
      desktop="4"
      key=".0"
      mobile="12"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      className="mfui-beta-download-links__column"
      desktop="4"
      key=".1"
      mobile="12"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      className="mfui-beta-download-links__column"
      desktop="4"
      key=".2"
      mobile="12"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      className="mfui-beta-download-links__column"
      desktop="4"
      key=".3"
      mobile="12"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      className="mfui-beta-download-links__column"
      desktop="4"
      key=".4"
      mobile="12"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DownloadLinks render component with two columns 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_3"
>
  <Grid
    guttersLeft="medium"
  >
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      key=".0"
      mobile="12"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      key=".1"
      mobile="12"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      key=".2"
      mobile="12"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;
